consumer-goods/2.0/modules/ROOT/pages/index.adoc
= MuleSoft Accelerator for Consumer Goods

MuleSoft Accelerator for Consumer Goods helps consumer goods companies integrate their digital operations to gain visibility into trade promotion management and retail execution. Our foundational assets are expertly designed to jumpstart your top integration and business initiatives so that IT teams can spend more time innovating and less time building from scratch.

== Use cases

=== Product and Account Integration with Hierarchies

The https://anypoint.mulesoft.com/exchange/2cc3c2c9-ddd3-4582-bdcc-b510f30065a7/mulesoft-accelerator-for-consumergoods/minor/3.0/pages/Use%20case%201%20-%20Product%20and%20Account%20Integration%20with%20Hierarchies/[Product and Account Integration with Hierarchies^] use case surfaces relevant product, customer, demand planning, and pricing information from ERP and PIM systems and easily consolidate this information into Trade Promotion Management (TPM) platforms like Salesforce Consumer Goods Cloud for informed promotional planning.

=== Retail execution

The https://anypoint.mulesoft.com/exchange/2cc3c2c9-ddd3-4582-bdcc-b510f30065a7/mulesoft-accelerator-for-consumergoods/minor/2.0/pages/Use%20case%202%20-%20Retail%20execution/[Retail Execution^] use case unlocks shelf data to enable perfect retail execution with pre-built assets. Access store audit data from image recognition software, like Trax, and smoothly integrate into Retail Execution platforms, such as Salesforce Consumer Goods Cloud, to monitor at shelf performance in one platform.

=== Trade Promotion Effectiveness

The https://anypoint.mulesoft.com/exchange/2cc3c2c9-ddd3-4582-bdcc-b510f30065a7/mulesoft-accelerator-for-consumergoods/minor/3.0/pages/Use%20case%201b%20-%20Trade%20promotion%20effectiveness/[Trade Promotion Effectiveness^] use case allows you to visualize your promotions in one integrated platform with pre-built assets that integrate Business Intelligence Tools (BI Tools), such as CRM Analytics, into a TPM platform like Salesforce Consumer Goods Cloud.

== See Also

* xref:accelerators-home::getting-started.adoc[Getting Started Guide]
* Required xref:prerequisites.adoc[Prerequisites] for this accelerator
* xref:cg-assets.adoc[Available Assets]
* xref:release-notes.adoc[Release Notes]
* https://www.mulesoft.com/exchange/org.mule.examples/mulesoft-accelerator-for-consumer-goods/[MuleSoft Accelerator for Consumer Goods^] on Anypoint Exchange
